network-policies/challenge1.yaml
#We need a new default-deny NetworkPolicy named deny-out for all outgoing traffic from Namespace app.
#It should still allow DNS traffic on port 53 TCP and UDP.
networkpolicy.networking.k8s.io/deny-out configured
controlplane $ cat deny-out.yaml 
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-out
  namespace: app
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
controlplane $
